<resources>
    <string name="app_name">CTSV</string>
    <string name="welcome">Welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="register">Đăng ký</string>
    <string name="service_currency">đ</string>
    <string name="service_contact_title">Mọi thắc mắc xin liên hệ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="services_list">Danh sách các dịch vụ</string>
    <string name="search">Tìm kiếm</string>
    <string name="register_service">Đăng ký dịch vụ</string>
    <string name="send">Gửi</string>
    <string name="cat_docs">Văn Bản</string>
    <string name="cat_learn">Học Tập</string>
    <string name="cat_others">Mục khác</string>
    <string name="service_detail_description">Mô tả</string>
    <string name="cat_allowance">Trợ cấp</string>
    <string name="note">Ghi chú</string>
    <string name="request_default_status">Đang xử lý</string>
    <string name="request_default_time">19/12/2019</string>
</resources>
