<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ServiceDetailFragment"
    android:layout_marginBottom="58dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/service_detail_cover_image_height">

            <ImageView
                android:id="@+id/ivServiceThumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/img_helper_service_detail" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/img_filter" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:onClick="clickToBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/grid_spacing"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/btnBack"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_arrow_back"/>

                </LinearLayout>
                <TextView
                    android:id="@+id/tvServiceTitle"
                    android:layout_width="match_parent"
                    android:layout_height="192dp"
                    android:text="@string/welcome"
                    android:gravity="bottom"
                    android:textAppearance="?attr/textAppearanceHeadline4"
                    android:textColor="@color/secondaryTextColor"
                    android:padding="@dimen/grid_spacing"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/grid_spacing">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_currency"
                    android:textColor="@color/primaryColor"/>
                <TextView
                    android:id="@+id/tvServiceFee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryColor"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:layout_marginLeft="5dp"
                    android:text="20,000"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/register"
                app:icon="@drawable/ic_send"
                app:iconGravity="end"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvServiceDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_margin="@dimen/grid_spacing"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/grid_spacing"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"
                android:text="@string/service_contact_title"/>

            <com.duatson.studentapp.application.ExpandableHeightListView
                android:id="@+id/lvContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/whiteColor"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>